# ChangeLog for games-rpg/magus
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*magus-1.3.3 (28 May 2011)

  30 Sep 2011; Martin Väth <martin@mvath.de>
  Fix dependencies, in particular do not require optional media-gfx/pngcrush

  29 May 2011; Martin Väth <martin@mvath.de>
  Add REQUIRED_USE and fix some missing dependencies.

  28 May 2011; Martin Väth <martin@mvath.de>
  Version bump and patch for missing autopoint support.
  Remove old ebuild.

*magus-1.3.1 (10 Mar 2010)

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  25 Jul 2010; Martin Väth <martin@mvath.de> :
  Do not install unnecessary .h files.
  mozilla-firefox->firefox.
  USE flags: Add icecat, rename kde->konqueror, pdf->acroread.
  Let firefox USE take precedence.

  31 Mar 2010; Martin Väth <martin@mvath.de> :
  +magus-1.3.1.ebuild +magus-99999999.ebuild -magus-live-1.3.1-r6.ebuild:
  Rename magus-live into magus: Since now some tarball is available and the
  monotone repository is too often inaccessible, we do not install the
  live-version by default. If you want to install the live version unmask
  the magus-99999999 ebuild with
  echo 'games-rpg/magus **' >>/etc/portage/package.keywords
  Note that you can prevent the live version from fetching the monotone
  repository by setting ESCM_OFFLINE=1 or EMTN_OFFLINE=1 (temporarily in the
  environment or permanently in /etc/make.conf); the former will influence all
  live ebuilds, the latter only those which use monotone (currently only magus)

*magus-live-1.3.1 (03 May 2010)

  10 Mar 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r6.ebuild: Fix monotone dependency.

  08 Jan 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r6.ebuild: Fix postgresql dependency.

  04 Jan 2010; Martin Väth <martin@mvath.de> :
  magus-live-1.3.1-r6.ebuild: Select latest head.
  Remove useless static libs and .la files by default;
  can be overridden by EXTRA_ECONF=--enable-static
