@@ -15,6 +15,7 @@ games-rpg/magus:acroread - Depend on acroread (otherwise you are responsible to 
 games-rpg/magus:firefox - Depend on firefox browser (without a browser useflag you are responsible to install and configure a browser)
 games-rpg/magus:icecat - Depend on icecat browser
 games-rpg/magus:konqueror - Depend on konqueror browser
+games-rpg/magus:pngcrush - Use pngcrush for opimizing png before installation
 games-rpg/magus:postgres - Use postgresql instead of sqlite
 games-rpg/magus:seamonkey - Depend on seamonkey browser
 net-misc/sshstart:keychain - Pull in keychain as dependency. Not required, but recommended for smoother operation.
