@@ -1,8 +1,12 @@
 # ChangeLog for games-rpg/magus
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
 *magus-1.3.3 (28 May 2011)
+
+  13 Mar 2012; Martin Väth <martin@mvath.de>
+  Fix dependency on dev-cpp/gtkmm: slot 3 is not (yet?) supported upstream.
+  Introduce pngcrush useflag.
 
   30 Sep 2011; Martin Väth <martin@mvath.de>
   Fix dependencies, in particular do not require optional media-gfx/pngcrush
